<resources>
    <!-- Standard String values -->
    <string name="app_name">SkillsVisionApp</string>
    <string name="title_activity_basic">basic</string>

    <!-- String values for start activity -->
    <string name="skillsvision_logo">SkillsVision_logo</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <!-- String values for register account activity -->
        <!-- Place holders for fields -->
    <string name="placeholder_email"><i>E-mail</i></string>
    <string name="placeholder_username"><i>Username</i></string>
    <string name="placeholder_password"><i>Password</i></string>
    <string name="placeholder_confirm_password"><i>Confirm Password</i></string>
    <string name="placeholder_birthdate"><i>Birthdate (DD-MM-YYYY)</i></string>
    <string name="placeholder_location"><i>Location</i></string>
        <!-- Buttons -->
    <string name="register_account_button_text">Register Account</string>
        <!-- Toolbar-->
    <string name="register_account_toolbar_title">REGISTER ACCOUNT</string>
</resources>
