<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/skillsvision_green">

    <include
        android:id="@+id/toolbar_register_account"
        layout="@layout/toolbar_green"/>

    <EditText
        android:id="@+id/activity_register_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:textColor="@color/fields"
        android:hint="@string/placeholder_email"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/activity_register_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:textColor="@color/fields"
        android:hint="@string/placeholder_password"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/activity_register_confirm_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:textColor="@color/fields"
        android:hint="@string/placeholder_confirm_password"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/activity_register_birthdate_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:textColor="@color/fields"
        android:hint="@string/placeholder_birthdate"
        android:ems="10"
        android:inputType="date"/>

    <EditText
        android:id="@+id/activity_register_location_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:textColor="@color/fields"
        android:hint="@string/placeholder_location"
        android:ems="10"
        android:inputType="text"/>

    <Button
        android:id="@+id/activity_register_register_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/register_account_button_text"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:background="@color/skillsvision_green_accent"
        android:drawableRight="@mipmap/icon_advance"
        />


</LinearLayout>