<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/activity_start_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/skillsvision_logo"
        android:src="@drawable/logo_skillsvision"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/activity_start_register_button"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@color/skillsvision_blue"
        android:drawableRight="@mipmap/icon_advance"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <Button
        android:id="@+id/activity_start_login_button"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/skillsvision_blue"
        android:drawableRight="@mipmap/icon_advance"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />


</android.support.constraint.ConstraintLayout>